# bootsector

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: errors.rs  gpt.rs  io.rs  le.rs  lib.rs  mbr.rs  no_std.rs  rangereader.rs  read.rs
src/test-data/: 4t-gpt.img  fdisk-gpt.img
tests/: manual.rs
tests/test-data/: fdisk-1m-part.img  fdisk-empty-gpt.img  fdisk-empty-mbr.img  pirroman-short-header.img  tiny.img
