[package]
authors = ["Chris West (Faux) <git@goeswhere.com>"]
categories = [
    "filesystem",
    "os",
    "parsing",
]
description = "Read partitions from block devices or files"
license = "MIT"
name = "bootsector"
readme = "README.md"
repository = "https://github.com/FauxFaux/bootsector"
version = "0.2.0"

edition = "2018"

[dependencies]
crc = "2"
