[package]
authors = ["Chris West (Faux) <git@goeswhere.com>"]
categories = [
    "filesystem",
    "os",
    "parsing",
]
description = "Read partitions from block devices or files"
license = "MIT"
name = "bootsector"
readme = "README.md"
repository = "https://github.com/FauxFaux/bootsector"
version = "0.2.0"

edition = "2018"

[features]
default = ["std"]
std = ["snafu/std", "positioned-io2"]

[dependencies]
crc = "3"
positioned-io2 = { versrion = "0.3", optional = true }
snafu = { version ="0.7.4", default-features = false, features = ["rust_1_46"] }
